--- a/HW1 Task 2 TrafficLight/Base.lproj/Main.storyboard
+++ b/HW1 Task 2 TrafficLight/Base.lproj/Main.storyboard
@@ -15,39 +15,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="94z-f7-07T">
-                                <rect key="frame" x="136" y="94" width="143" height="143"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="94z-f7-07T">
+                                <rect key="frame" x="135.5" y="94" width="143" height="143"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jAQ-iR-y4j">
-                                <rect key="frame" x="136" y="245" width="143" height="143"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jAQ-iR-y4j">
+                                <rect key="frame" x="135.5" y="245" width="143" height="143"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y4g-kS-KhX">
-                                <rect key="frame" x="136" y="396" width="143" height="143"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4g-kS-KhX">
+                                <rect key="frame" x="135.5" y="396" width="143" height="143"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRG-I8-eHe">
-                                <rect key="frame" x="96" y="632" width="223" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRG-I8-eHe">
+                                <rect key="frame" x="104.5" y="621" width="205" height="76"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                 <state key="normal" title="START"/>
                                 <connections>
-                                    <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dd2-KD-V0T"/>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="mBg-sd-WdE"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="y4g-kS-KhX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="1KW-12-MI5"/>
+                            <constraint firstItem="jAQ-iR-y4j" firstAttribute="centerX" secondItem="94z-f7-07T" secondAttribute="centerX" id="2sZ-RC-eYE"/>
+                            <constraint firstItem="y4g-kS-KhX" firstAttribute="top" secondItem="jAQ-iR-y4j" secondAttribute="bottom" constant="8" id="AgC-Iy-qQm"/>
+                            <constraint firstItem="94z-f7-07T" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="B1H-Ad-L7Y"/>
+                            <constraint firstItem="94z-f7-07T" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.159598" id="Cqg-WI-iGc"/>
+                            <constraint firstItem="WRG-I8-eHe" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.495169" id="H76-Zq-X1W"/>
+                            <constraint firstItem="94z-f7-07T" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.345411" id="Ih9-ye-ptA"/>
+                            <constraint firstItem="jAQ-iR-y4j" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.159598" id="U5R-4D-zBj"/>
+                            <constraint firstItem="jAQ-iR-y4j" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.345411" id="WyU-ay-xTv"/>
+                            <constraint firstItem="94z-f7-07T" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="YqQ-3P-G3b"/>
+                            <constraint firstItem="y4g-kS-KhX" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.159598" id="a2u-n7-IV6"/>
+                            <constraint firstItem="WRG-I8-eHe" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.0848214" id="bVx-7A-g41"/>
+                            <constraint firstItem="jAQ-iR-y4j" firstAttribute="top" secondItem="94z-f7-07T" secondAttribute="bottom" constant="8" id="beX-fd-jeP"/>
+                            <constraint firstItem="y4g-kS-KhX" firstAttribute="centerX" secondItem="jAQ-iR-y4j" secondAttribute="centerX" id="bma-sa-BoY"/>
+                            <constraint firstItem="jAQ-iR-y4j" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dc7-O3-huZ"/>
+                            <constraint firstItem="y4g-kS-KhX" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.345411" id="tFE-st-UgB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WRG-I8-eHe" secondAttribute="bottom" constant="165" id="vZu-5c-ki5"/>
+                            <constraint firstItem="WRG-I8-eHe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="wzX-73-j9z"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="greenLight" destination="y4g-kS-KhX" id="Peg-fq-nik"/>
                         <outlet property="redLight" destination="94z-f7-07T" id="6TY-aS-UNr"/>
-                        <outlet property="startButton" destination="WRG-I8-eHe" id="Ixd-kG-hB9"/>
+                        <outlet property="startButton" destination="WRG-I8-eHe" id="eEs-Oj-hT5"/>
                         <outlet property="yellowLight" destination="jAQ-iR-y4j" id="TRQ-ro-iFW"/>
                     </connections>
                 </viewController>
